# robin-smesh

./: .gitignore  Cargo.toml  DEVTO_ARTICLE.md  LICENSE-APACHE  README.md  summary_2026-01-20_15-24-29.md  summary_2026-01-20_15-26-30.md  summary_2026-01-20_15-51-10.md  summary_2026-01-20_17-44-46.md
reports/: .gitkeep  summary_2026-01-20_16-09-02.md  summary_2026-01-20_18-18-04.md  summary_2026-01-20_18-24-54.md  summary_2026-01-20_18-43-16.md  summary_2026-01-20_18-49-59.md  summary_2026-01-20_18-57-52.md  summary_2026-01-20_19-53-30.md
robin-agents/: Cargo.toml
robin-agents/prompts/: README.md  analyst_attribution.toml  analyst_crypto.toml  analyst_forensic.toml  analyst_lead.toml  analyst_malware.toml  analyst_network.toml  analyst_osint.toml  analyst_threat.toml  filter.toml  refiner.toml
robin-agents/src/: analyst.rs  backend.rs  blockchain.rs  crawler.rs  enricher.rs  extractor.rs  filter.rs  lib.rs  paste.rs  persona.rs  refiner.rs  scraper.rs  specialists.rs  traits.rs
robin-cli/: Cargo.toml
robin-cli/src/: main.rs
robin-core/: Cargo.toml
robin-core/src/: artifacts.rs  field.rs  lib.rs  search_engines.rs  signals.rs
robin-runtime/: Cargo.toml
robin-runtime/src/: lib.rs  swarm.rs
robin-tor/: Cargo.toml
robin-tor/src/: crawler.rs  lib.rs  proxy.rs  scraper.rs
