[workspace]
resolver = "2"
members = [
    "robin-core",
    "robin-tor",
    "robin-agents",
    "robin-runtime",
    "robin-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Robin×SMESH Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/copyleftdev/robin-smesh"
description = "Decentralized Dark Web OSINT using SMESH signal diffusion"

[workspace.dependencies]
# Core SMESH primitives (we inline the essential parts)
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# HTTP + Tor
reqwest = { version = "0.12", default-features = false, features = ["json", "socks", "rustls-tls"] }

# HTML parsing
scraper = "0.20"

# LLM clients
async-openai = "0.25"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# Random
rand = "0.8"

# Regex for artifact extraction
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
