[package]
name = "robin-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SMESH-based swarm runtime for Robin×SMESH"

[dependencies]
robin-core = { path = "../robin-core" }
robin-tor = { path = "../robin-tor" }
robin-agents = { path = "../robin-agents" }

tokio = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
